// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render SaveUnsaveBlog component correctly if bid in blogsSaved 1`] = `
<DocumentFragment>
  <div>
    <a
      class="unsave-container"
      data-testid="save_unsave_blog"
      disabled=""
    >
      <abbr
        title="Unsave Blog"
      >
        <svg
          class="unsave-icon"
        >
          bookmark-solid.svg
        </svg>
      </abbr>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Should render SaveUnsaveBlog component correctly if bid not in blogsSaved 1`] = `
<DocumentFragment>
  <div>
    <a
      class="save-container"
      data-testid="save_unsave_blog"
      disabled=""
    >
      <abbr
        title="Save Blog"
      >
        <svg
          class="save-icon"
        >
          bookmark-regular.svg
        </svg>
      </abbr>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Should render SaveUnsaveBlog component correctly without uname 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
